# Silica

./: .clangd  .gitignore  README.md  meson.build  meson_options.txt  quackers.py
doc/: attributes.md  basics.md  quickstart.md
example/: main.cpp  meson.build  print.hpp
example/data/: bicycle.hpp  car.hpp  colors.hpp  suv.hpp
generator/: action.hpp  ast_callback.hpp  context.hpp  files.cpp  flag.hpp  main.cpp  meson.build  parser.cpp  sysinclude.cpp  templates.hpp  to_filename.hpp
generator/old/: main.cpp.old
generator/old/parser_old/: context.hpp  parser.cpp  parser.hpp
generator/parser/: ast_callback.hpp  context.hpp  parser.cpp  parser.hpp  sysinclude.cpp
generator/templates/: enum.inc  enum.inja  header.inc  header.inja  object.inc  object.inja
generator/tools/: files.cpp  files.hpp  to_filename.hpp
include/silica/: constexpr_map.hpp  constexpr_sort.hpp  expected.hpp  reflectable.hpp  type_id.hpp
include/silica/alloc/: alloc.hpp  buff_alloc.hpp
include/silica/error/: error.hpp  ti.hppt_string.hpp  tight_string.hpp
include/silica/reflection/: .hppe_great_table.hpp  actions.hpp  reflection.hpp  the_great_table.hpp  type_name.hpp
include/silica/serialization/: binary.hpp  convert.hpp  json.hpp  simd_json.hpp  yaml.hpp
include/silica/tools/: append_buf.hpp  format.hpp  names.hpp  sizeof.hpp  stringify.hpp  traits.hpp
include/silica/type_info/: type_info.hpp
include/silica/type_info/variants/: bool.hpp
include/silica/type_info/variants/array/: array.hpp  c_array.hpp  iarray.hpp  std_array.hpp
include/silica/type_info/variants/enum/: enum.hpp  enum_impl.hpp  ienum.hpp
include/silica/type_info/variants/floating/: float.hpp  floating.hpp  ifloating.hpp
include/silica/type_info/variants/integer/: iinteger.hpp  int.hpp  integer.hpp
include/silica/type_info/variants/map/: imap.hpp  map.hpp  std_map.hpp  std_unordered_map.hpp
include/silica/type_info/variants/object/: access.hpp  field_desc.hpp  field_info.hpp  field_iterator.hpp  fields.hpp  me.hppod_desc.hpp  me.hppod_info.hpp  me.hppod_iterator.hpp  me.hppods.hpp  method_desc.hpp  method_info.hpp  method_iterator.hpp  methods.hpp  object.hpp
include/silica/type_info/variants/pointer/: ipointer.hpp  pointer.hpp  std_.hppared_ptr.hpp  std_shared_ptr.hpp  std_unique_ptr.hpp
include/silica/type_info/variants/sequence/: err.hppelper.hpp  err_helper.hpp  isequence.hpp  sequence.hpp
include/silica/type_info/variants/sequence/list/: ilist.hpp  std_deque.hpp  std_list.hpp
include/silica/type_info/variants/sequence/queue/: iqueue.hpp  queue_iterator.hpp  std_queue.hpp
include/silica/type_info/variants/sequence/set/: iset.hpp  std_set.hpp  std_unordered_set.hpp
include/silica/type_info/variants/sequence/stack/: istack.hpp  stack_iterator.hpp  std_stack.hpp
include/silica/type_info/variants/sequence/vector/: ivector.hpp  std_vector.hpp
include/silica/type_info/variants/string/: c_string.hpp  istring.hpp  std_basic_string.hpp  std_basic_string_view.hpp  string.hpp
include/silica/types/: all_types.hpp  bool.hpp  common_actions.hpp  float.hpp  integer.hpp  map.hpp  sequence.hpp  string.hpp  type_actions.hpp  unknown.hpp
include/silica/types/array/: c_array.hpp  std_array.hpp
include/silica/types/pointers/: std_.hppared_ptr.hpp  std_shared_ptr.hpp  std_unique_ptr.hpp
include/silica/variable/: box.hpp  var.hpp
include/silica/variant/: overloaded.hpp  variant.hpp
readme/: how_to_use.md
src/: err_helper.cpp  meson.build
src/reflection/: reflection.cpp  sprint.hpp
src/serialization/: define_retry.hpp  position.hpp
src/serialization/binary/: binary.cpp  group_reader.hpp  group_writer.hpp
src/serialization/json/: json.cpp  json.l  lexer_json.yy.cpp  lexer_json.yy.h  parser_json.cpp  parser_json.hpp
src/serialization/readers/: ireader.hpp  stream_reader.hpp  vector_reader.hpp
src/serialization/writers/: iwriter.hpp  stream_writer.hpp  string_writer.hpp  vector_writer.hpp
src/serialization/yaml/: lexer_yaml.yy.cpp  lexer_yaml.yy.h  parser_yaml.cpp  parser_yaml.hpp  serializer.hpp  yaml.cpp  yaml.l
src/tools/: stringify.cpp
src/variable/: box.cpp  var.cpp
subprojects/: cli11.wrap  inja.wrap  llvm.wrap  nlohmannjson.wrap  reflex.wrap
subprojects/packagefiles/: inja.patch  llvm-meson-compat.patch  llvm.patch
subprojects/packagefiles/reflex-5.1.1/: meson.build
