option('generator', type: 'boolean', value: false, description: 'Whether to build the generator in addition to the Silica library. Enabling the generator can significantly increase build times.')
option('example', type: 'boolean', value: false, description: 'Whether to build the example program. Requires the generator option.')